  * re-dumped with latest schema loader devel version
  * stripped _id suffixes for a number of relationships that still had
    them.  Hopefully the schema loader patch used for this will make
    it into schema loader releases.  List of changed relationship names:

     lib/Bio/Chado/Schema/CellLine/CellLine.pm
      cell_line_relationship_subject_ids -> cell_line_relationship_subjects
      cell_line_relationship_object_ids  -> cell_line_relationship_objects

     lib/Bio/Chado/Schema/Contact/Contact.pm
      contact_relationship_object_ids -> contact_relationship_objects
      contact_relationship_subject_ids -> contact_relationship_subjects

     lib/Bio/Chado/Schema/Cv/Cvterm.pm
      arraydesign_platformtype_ids -> arraydesign_platformtypes
      arraydesign_substratetype_ids -> arraydesign_substratetypes
      cvtermpath_type_ids -> cvtermpath_types
      cvtermpath_object_ids -> cvtermpath_objects
      cvtermpath_subject_ids -> cvtermpath_subjects
      cvtermprop_type_ids -> cvtermprop_types
      cvtermprop_cvterm_ids -> cvtermprop_cvterms
      cvterm_relationship_type_ids -> cvterm_relationship_types
      cvterm_relationship_object_ids -> cvterm_relationship_objects
      cvterm_relationship_subject_ids -> cvterm_relationship_subjects
      cvtermsynonym_type_ids -> cvtermsynonym_types
      cvtermsynonym_cvterm_ids -> cvtermsynonym_cvterms
      expression_cvterm_cvterm_ids -> expression_cvterm_cvterms
      expression_cvterm_cvterm_type_ids -> expression_cvterm_cvterm_types
      phenotype_assay_ids -> phenotype_assays
      phenotype_attr_ids -> phenotype_attrs
      phenotype_observable_ids -> phenotype_observables
      phenotype_cvalue_ids -> phenotype_cvalues
      protocolparam_unittype_ids -> protocolparam_unittypes
      protocolparam_datatype_ids -> protocolparam_datatypes

     lib/Bio/Chado/Schema/Genetic/Environment.pm
      phenotype_comparison_environment2_ids -> phenotype_comparison_environment2s